# dotfiles

./: .gitignore  ADR.md  Brewfile  CLAUDE.md  DESIGN.md  Makefile  PRD.md  PROJECT.md  README.md  TASKS.md  gitconfig  ide.sh  install.sh  links.sh  sync.sh  test.sh  zshrc
.github/workflows/: test.yml
ai/: claude.md  codex.md  common.md
claude/: settings.json
config/: starship.toml
config/claude/: settings.json  statusline.sh
config/cmux/: com.cmuxterm.app.plist
config/codex/: config.toml  model_catalog.json
config/cursor/: keybindings.json  settings.json
config/forge/: forge.toml
config/ghostty/: config
config/git/: ignore
config/obsidian/: obsidian.json
config/starship/: starship.toml
config/tmux/: README.md  tmux.conf
config/warp/: keybindings.yaml
config/zed/: keymap.json  settings.json  tasks.json
templates/agent/: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
templates/agent/app/: main.py
templates/agent/deploy/fly/: fly.toml
templates/api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
templates/cli/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
templates/data/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
templates/property-management/: .gitignore  DESIGN.md  ORGANIZATION.md  PROJECT.md  PROPERTY.md  SETUP.md  TASKS.md  TIMELINE.md
templates/web/: .env.example  (+4 more)
templates/web/backend/: pyproject.toml  requirements.txt
templates/web/backend/app/: main.py
(+46 files in other folders)
